--- a/templates/video.html
+++ b/templates/video.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReelsBuilder</title>
+    <title>ASON AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
             <a class="link-text" href="{%  url 'video_generator' %}"><span>Features</span></a>
             <a class="link-text" href="{% url 'pricing' %}"><span>Pricing</span></a>
         </div>
-        <span class="mg">©Copyright 2023 ReelsBuilder</span>
+        <span class="mg">©Copyright 2024 AsonAI</span>
     </div>
 
     <script src="{% static 'js/script.js' %}"></script>
